--- a/main.html
+++ b/main.html
@@ -11,6 +11,48 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<header>Interstellar</header>
+
+	<nav>
+		 <a id="nav-actor" href="#actor">Actors</a>
+		 <a id="nav-quote" href="#quote">Quotes</a>
+	</nav>
+
+	 <section id="summary">
+    <h2>Summary</h2>
+    <p>
+      Interstellar follows a group of astronauts traveling through a wormhole near Saturn
+      in search of a new home for humanity, as Earth becomes uninhabitable. The story blends
+      emotion, science, time dilation, and the bond between a father and daughter.
+    </p>
+  </section>
+
+	<section id="actor">
+    <h2>Main Actors</h2>
+    <p><strong>Matthew McConaughey</strong> as Cooper, a former NASA pilot.</p>
+    <p><strong>Anne Hathaway</strong> as Dr. Amelia Brand, a scientist and astronaut.</p>
+    <p><strong>Jessica Chastain</strong> as Murph, Cooper’s daughter (adult).</p>
+  </section>
+
+
+	<section id="quote">
+    <h2>Favorite Quote</h2>
+    <p>
+      “Love is the one thing we're capable of perceiving that transcends dimensions of time and space.”
+    </p>
+  </section>
+
+
+	<aside>
+    <h3>Movie Info</h3>
+    <p><strong>IMDb Rating:</strong> 8.7/10</p>
+    <p><strong>Release Date:</strong> November 7, 2014</p>
+  </aside>
+
+	<footer>
+    Produced by: Christopher Nolan
+  </footer>
+	
 </body>
 
 </html>
