--- a/main.html
+++ b/main.html
@@ -18,12 +18,21 @@
 		 <a id="nav-quote" href="#quote">Quotes</a>
 	</nav>
 
+
+<details>
+  <summary>Movie Summary</summary>
+  <p>
+    Interstellar follows a group of astronauts traveling through a wormhole near Saturn
+      in search of a new home for humanity, as Earth becomes uninhabitable. The story blends
+      emotion, science, time dilation, and the bond between a father and daughter.
+  </p>
+</details>
+
+	
 	 <section id="summary">
     <h2>Summary</h2>
     <p>
-      Interstellar follows a group of astronauts traveling through a wormhole near Saturn
-      in search of a new home for humanity, as Earth becomes uninhabitable. The story blends
-      emotion, science, time dilation, and the bond between a father and daughter.
+      
     </p>
   </section>
 
